Add Appointment model, introduce factory bot

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -28,4 +28,11 @@
 #       enabled: "ON"
 
 en:
+  activerecord:
+    errors:
+      models:
+        appointment:
+          attributes:
+            slot_id:
+              not_free: is not free
   hello: "Hello world"
